rhai/codegen/ui_tests/export_fn_missing_value.stderr
error: requires value
 --> $DIR/export_fn_missing_value.rs:9:13
  |
9 | #[export_fn(name)]
  |             ^^^^

error[E0425]: cannot find function `test_fn` in this scope
  --> $DIR/export_fn_missing_value.rs:19:8
   |
19 |     if test_fn(n) {
   |        ^^^^^^^ not found in this scope
